<resources>
    <string name="app_name">UIPractice</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="ui_course">ui course</string>
    <string name="registerr" >Register</string>
    <string name="twitter">Twitter</string>
    <string name="sign_in">sign in</string>
    <string name="full_name">Full Name</string>
    <string name="Email_Address">Email Address</string>
    <string name="password">Password</string>
    <string name="get_start">Get Start</string>
</resources>