<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:src="@drawable/ic_hospital"
    android:padding="50dp"/>
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ui_course"
      android:layout_gravity="center"
      android:padding="15dp"
      android:textSize="20sp"
      android:textStyle="bold"
      android:textColor="@color/black"
      android:shadowDx="2"
      android:shadowColor="@color/dark"
      android:shadowDy="2"
      android:shadowRadius="15"
    />
  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      app:cardElevation="10dp"
      app:cardCornerRadius="20dp">
    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/register_mrl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/RippleStyleGray"
        >
      <androidx.appcompat.widget.AppCompatButton
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/register"
          android:textColor="@color/white"
          android:background="@color/buttons"

          />
    </com.balysv.materialripple.MaterialRippleLayout>


  </androidx.cardview.widget.CardView>
  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="40dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="10dp"
      app:cardElevation="10dp"
      app:cardCornerRadius="20dp">
    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/login_mrl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/RippleStyleGray2"
      >
      <androidx.appcompat.widget.AppCompatButton

          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/login"
          android:background="@drawable/background"
          android:textColor="@color/black"

          />
    </com.balysv.materialripple.MaterialRippleLayout>


  </androidx.cardview.widget.CardView>






</LinearLayout>