<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/newColor"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerr"
            android:layout_gravity="start"
            android:layout_marginLeft="20dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:shadowDx="2"
            android:shadowColor="@color/dark"
            android:shadowDy="2"
            android:shadowRadius="15"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="create an account to access all features.Register\n with Twitter,Facebook or with your email address"
            android:layout_gravity="start"
            android:layout_marginLeft="20dp"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp">
                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/RippleStyleWhite"
                    >
                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/twitter"
                        android:drawableLeft="@drawable/ic_twitter"
                        android:textStyle="bold"
                        android:paddingLeft="10dp"
                        android:textColor="@color/white"
                        android:background="#03A9F4"

                        />
                </com.balysv.materialripple.MaterialRippleLayout>


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp">
                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/RippleStyleWhite"
                    >
                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Facebook"
                        android:drawableLeft="@drawable/circle_facebook__1_"
                        android:textStyle="bold"
                        android:paddingLeft="10dp"
                        android:textColor="@color/white"
                        android:background="#2E55C0"

                        />
                </com.balysv.materialripple.MaterialRippleLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_hospital"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/full_name"
        android:textStyle="bold"
        android:textColor="@color/newColor"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/Email_Address"
        android:textStyle="bold"
        android:textColor="@color/newColor"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/password"
        android:textStyle="bold"
        android:textColor="@color/newColor"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
       android:layout_weight="1"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="15dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp">
            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RippleStyleWhite"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_start"
                    android:textStyle="bold"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:background="@color/newColor"

                    />
            </com.balysv.materialripple.MaterialRippleLayout>


        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</LinearLayout>

        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/newColor"
            />

    </LinearLayout>

</RelativeLayout>